WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159383
[RTL Scrollbars] RTL Scrollbars broken with clients creating Web Views via [WKView initWithFrame:contextRef:pageGroupRef:]
https://bugs.webkit.org/show_bug.cgi?id=159383
Summary
[RTL Scrollbars] RTL Scrollbars broken with clients creating Web Views via [W...
Myles C. Maxfield
Reported
2016-07-01 19:36:21 PDT
[RTL Scrollbars] RTL Scrollbars broken with clients creating Web Views via [WKView initWithFrame:contextRef:pageGroupRef:]
Attachments
Patch
(3.08 KB, patch)
2016-07-01 19:44 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(3.11 KB, patch)
2016-07-06 11:59 PDT
,
Myles C. Maxfield
andersca
: review+
Details
Formatted Diff
Diff
Patch for committing
(3.11 KB, patch)
2016-07-06 12:05 PDT
,
Myles C. Maxfield
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-07-01 19:44:34 PDT
Created
attachment 282633
[details]
Patch
Myles C. Maxfield
Comment 2
2016-07-01 19:45:08 PDT
<
rdar://problem/26921117
>
Anders Carlsson
Comment 3
2016-07-03 07:45:16 PDT
Comment on
attachment 282633
[details]
Patch I think this is going to break the case where you have the policy set on the preferences?
Myles C. Maxfield
Comment 4
2016-07-03 09:24:48 PDT
(In reply to
comment #3
)
> Comment on
attachment 282633
[details]
> Patch > > I think this is going to break the case where you have the policy set on the > preferences?
There are two bits: Whether the policy is .Content or .System Whether or not the system is in RTL This patch only sets the second bit. The second bit is only consulted if the policy is .System.
Anders Carlsson
Comment 5
2016-07-06 11:53:26 PDT
Comment on
attachment 282633
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282633&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:992 > +static uint32_t convertSystemLayoutDirection(NSUserInterfaceLayoutDirection direction)
I'd change this to return the WebCore::UserInterfaceLayoutDirection and then to the uint32_t cast at the call site.
Myles C. Maxfield
Comment 6
2016-07-06 11:59:16 PDT
Created
attachment 282919
[details]
Patch
Anders Carlsson
Comment 7
2016-07-06 12:04:04 PDT
Comment on
attachment 282919
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282919&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:992 > +static WebCore::UserInterfaceLayoutDirection convertSystemLayoutDirection(NSUserInterfaceLayoutDirection direction)
I would call this toUserInterfaceLayoutDirection - I think we use that idiom in other places.
Myles C. Maxfield
Comment 8
2016-07-06 12:05:57 PDT
Created
attachment 282922
[details]
Patch for committing
WebKit Commit Bot
Comment 9
2016-07-06 13:03:12 PDT
Comment on
attachment 282922
[details]
Patch for committing Rejecting
attachment 282922
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 282922, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit2/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/1637210
Myles C. Maxfield
Comment 10
2016-07-06 14:23:50 PDT
Committed
r202878
: <
http://trac.webkit.org/changeset/202878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug