[RTL Scrollbars] RTL Scrollbars broken with clients creating Web Views via [WKView initWithFrame:contextRef:pageGroupRef:] https://bugs.webkit.org/show_bug.cgi?id=159383 <rdar://problem/26921117>

Reviewed by Anders Carlsson.

The code which consults with the userInterfaceLayoutDirection of the view is
inside [WKWebView _initializeWithConfiguration:]. However, some clients create
Web Views via [WKView initWithFrame:contextRef:pageGroupRef:] which doesn't
call this code. Therefore, this codepath should do the same kind of direction
consulting.

* UIProcess/API/mac/WKView.mm:
(toUserInterfaceLayoutDirection):
(-[WKView initWithFrame:contextRef:pageGroupRef:relatedToPage:]):

Canonical link: https://commits.webkit.org/177608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202878 268f45cc-cd09-0410-ab3c-d52691b4dbfc